syntax = "proto3";
package freym.crud.delivery;
import "crud/delivery/shared.proto";

message GetViewDataRequest {
	string view = 1;
	AuthData auth = 2;
	DataFilter filter = 3;
	bool use_strong_consistency = 4;
	DeploymentTarget target = 5;
	DataWait wait = 6;
	string use_strong_consistency_by_id = 7;
}

message GetViewDataResponse {
	Data result = 1;
}

message GetViewDataListRequest {
	string view = 1;
	AuthData auth = 2;
	int64 limit = 3;
	int64 page = 4;
	DataFilter filter = 5;
	repeated DataOrder order = 6;
	bool use_strong_consistency = 7;
	DeploymentTarget target = 8;
	DataListWait wait = 9;
	string use_strong_consistency_by_id = 10;
}

message GetViewDataListResponse {
	repeated Data result = 1;
	int64 limit = 2;
	int64 page = 3;
	int64 total = 4;
}
